[package]
name = "ark-algebra-intro"
version = "0.3.1-alpha.0"
edition = "2018"
description = "Introduction to `arkworks` algebra APIs"
repository = "https://github.com/Pratyush/algebra-intro"
documentation = "https://docs.rs/ark-algebra-intro/"
keywords = ["finite-fields", "elliptic-curves", "pairings"]
categories = [ "cryptography" ]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"

[dependencies]

ark-std = { version = "0.3" }
ark-ff = { version = "0.3" }
ark-ec = { version = "0.3" }
ark-serialize = { version = "0.3" }
ark-bls12-381 = { version = "0.3", features = [ "curve" ] }
rand = { version = "0.8", features = [ "std", "std_rng" ] }
num-bigint = { version = "0.4" }
